[package]
name = "morg-projects-migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
indexmap = { version = "1.9.1", features = ["serde"] }
itertools = "0.10.5"
serde_yaml = "0.9.13"
toml = { version = "0.5.9", features = ["preserve_order"] }
